sass/components/_nav.scss
nav {
  z-index: 50;
  position: sticky;
  top: 0;
  left: 0;

  @media screen and (max-width: 60rem) {
    position: static;
  }

  .skip-link {
    position: absolute;
    background-color: var(--black);
    color: var(--white);
    opacity: 0;
    top: 0;
    left: 0;

    &:focus {
      opacity: 1;
    }
  }
}

.nav__links {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: baseline;

  @media screen and (max-width: 60rem) {
    gap: 1.5rem;
  }
}

.nav__links-mm {
  font-size: clamp(14px, 1.5vw, 38px);
  color: var(--white);

  a {
    @include btn__underline;

    margin-left: 0.5rem;

    @media screen and (max-width: 60rem) {
      margin-left: 0.25rem;
    }
  }

  img {
    height: clamp(11px, 1.2vw, 25px);
  }
}

.nav__logo {
  @media screen and (max-width: 32rem) {
    display: none;
  }

  .link {
    display: flex;
    text-decoration: none;

    h1 {
      @include stroke__shadow(var(--orange-100), 0.5px);
    }
  }
}

.nav__tito-button {
  @include btn__secondary;
}

.nav__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  max-width: 114rem;
  margin: 2rem auto;
  background-image: url('data:image/svg+xml,<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect opacity="0.2" x="0.5" y="0.5" width="24" height="24" stroke="%23FFF9E1"/></svg>');
  background-color: var(--blue-500);
  padding: 1.5rem 4.2rem;
  transition: all 0.2s ease-in-out;
  border-radius: var(--corner);
  border: 1px solid var(--orange-100);

  @media screen and (max-width: 60rem) {
    flex-direction: column;
    gap: 0.75rem;
    width: auto;
    margin: 0 auto;
    border-radius: 0 0 var(--corner) var(--corner);
  }

  @media screen and (max-width: 32rem) {
    padding: 1rem 2px;
  }
}

.sticking .nav__wrapper {
  margin: 0 auto;
  padding: 0.5rem 4.2rem 0.75rem 4.2rem;
  transition: all 0.2s ease-in-out;
  border-radius: 0 0 var(--corner) var(--corner);
}

